applications/mediaplatform/resources/backend-traffic-policy.yml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: radarr-auth-redirect
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: radarr
  responseOverride:
  - match:
      statusCodes:
      - type: Value
        value: 302
    response:
      statusCode: 302
      header:
        set:
        - name: Location
          value: "https://auth.k8s.cguertin.dev/oauth2/start?rd=https://radarr.media.cguertin.dev/"
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: sonarr-auth-redirect
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: sonarr
  responseOverride:
  - match:
      statusCodes:
      - type: Value
        value: 302
    response:
      statusCode: 302
      header:
        set:
        - name: Location
          value: "https://auth.k8s.cguertin.dev/oauth2/start?rd=https://sonarr.media.cguertin.dev/"
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: prowlarr-auth-redirect
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: prowlarr
  responseOverride:
  - match:
      statusCodes:
      - type: Value
        value: 302
    response:
      statusCode: 302
      header:
        set:
        - name: Location
          value: "https://auth.k8s.cguertin.dev/oauth2/start?rd=https://prowlarr.media.cguertin.dev/"
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: qbittorrent-auth-redirect
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: qbittorrent
  responseOverride:
  - match:
      statusCodes:
      - type: Value
        value: 302
    response:
      statusCode: 302
      header:
        set:
        - name: Location
          value: "https://auth.k8s.cguertin.dev/oauth2/start?rd=https://qbittorrent.media.cguertin.dev/"
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: sabnzbd-auth-redirect
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: sabnzbd
  responseOverride:
  - match:
      statusCodes:
      - type: Value
        value: 302
    response:
      statusCode: 302
      header:
        set:
        - name: Location
          value: "https://auth.k8s.cguertin.dev/oauth2/start?rd=https://sabnzbd.media.cguertin.dev/"
